cmake_minimum_required(VERSION 3.5)

project(cpack-example #CPack-Example
    VERSION 0.5
    DESCRIPTION "CPack Example"
    LANGUAGES CXX
)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)

add_subdirectory(src)

add_executable(${PROJECT_NAME}
    main.cpp
)

target_link_libraries(${PROJECT_NAME} PRIVATE
    Qt${QT_VERSION_MAJOR}::Widgets

    View-lib
    )

set(PROGRAM_PERMISSIONS_DEFAULT
    OWNER_WRITE OWNER_READ OWNER_EXECUTE
    GROUP_READ GROUP_EXECUTE
    WORLD_READ WORLD_EXECUTE) #755

set(LIB_PERMISSIONS_DEFAULT
    OWNER_WRITE OWNER_READ
    GROUP_READ WORLD_READ)

set(DOC_PERMISSIONS_DEFAULT
    OWNER_WRITE OWNER_READ
    GROUP_READ WORLD_READ)

set(INC_PERMISSIONS_DEFAULT
    OWNER_WRITE OWNER_READ
    GROUP_READ WORLD_READ)

set_target_properties(${PROJECT_NAME}
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)

add_subdirectory(debian)
